force-app/main/default/objects/Woodshop_Project_Supplies__c/Woodshop_Project_Supplies__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  This will house all the existing supply records</description>
    <label>Woodshop Project Supplies</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Woodshop Project Supplies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Woodshop Project Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>