force-app/main/default/objects/Woodshop_Project_Supplies__c/fields/Available_for_Use__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Use__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Checkbox that will be TRUE, IF Quantity_Available__c&gt;0</description>
    <formula>Quantity_Available__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Use?</label>
    <type>Checkbox</type>
</CustomField>