force-app/main/default/objects/Woodshop_Project_Supplies__c/fields/Supply_Cost__c.field-meta.xml
<CustomField>
    <fullName>Supply_Cost__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will record how much supplies costs</description>
    <label>Supply Cost</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>