force-app/main/default/objects/Woodshop_Project_Supplies__c/fields/Supply_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_ID__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will create an ID number for supplies</description>
    <displayFormat>S-{0000}</displayFormat>
    <label>Supply ID</label>
    <type>AutoNumber</type>
</CustomField>