force-app/main/default/objects/Woodshop_Project_Supplies__c/fields/Woodshop_Projects__c.field-meta.xml
<CustomField>
    <fullName>Woodshop_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship
Purpose:  Will allow a user to show which supplies are being used on what project</description>
    <label>Woodshop Projects</label>
    <referenceTo>Woodshop_Projects__c</referenceTo>
    <relationshipLabel>Woodshop Project Supplies</relationshipLabel>
    <relationshipName>Woodshop_Project_Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>